# OpenSPH

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.user.6a6d5dc  LICENSE  QMAKE.md  README.md  all.pro  bench.pro  cli.pro  control  examples.pro  helpers.py  project.pro  sph.pro  statistics.sh  test.pro  tools.pro
core/: CMakeLists.txt  Sph.h  core.pro  sharedCore.pro
core/common/: AlignedAlloc.h  Assert.cpp  Assert.h  ForwardDecl.h  Globals.h  Traits.h  VersionHelper.h
core/gravity/: AggregateSolver.cpp  AggregateSolver.h  BarnesHut.cpp  BarnesHut.h  BruteForceGravity.h  CachedGravity.h  Collision.h  Galaxy.cpp  Handoff.cpp  Handoff.h  IGravity.h  Moments.h  NBodySolver.cpp  NBodySolver.h  SphericalGravity.h  SymmetricGravity.h
core/gravity/benchmark/: Gravity.cpp  NBodySolver.cpp
core/gravity/test/: BarnesHut.cpp  BruteForceGravity.cpp  CachedGravity.cpp  Moments.cpp  NBodySolver.cpp
core/io/: Column.h  FileManager.cpp  FileManager.h  FileSystem.cpp  FileSystem.h  LogWriter.cpp  LogWriter.h  Logger.cpp  Logger.h  Output.cpp  Output.h  Path.cpp  Path.h  Serializer.h  Table.h  Vdb.cpp  Vdb.h
core/io/test/: FileManager.cpp  FileSystem.cpp  Logger.cpp  Output.cpp  Path.cpp  Serializer.cpp
core/math/: AffineMatrix.h  Curve.cpp  Curve.h  Functional.h  MathBasic.h  MathUtils.h  Means.h  Morton.cpp  Morton.h  Quat.h  SparseMatrix.cpp  SparseMatrix.h
core/math/rng/: Rng.h  VectorRng.h
core/math/test/: AffineMatrix.cpp  Functional.cpp  Math.cpp  Morton.cpp  Quat.cpp
core/objects/: Exceptions.h  Object.h
core/objects/containers/: AdvancedAllocators.h  Allocators.h  Array.h  ArrayRef.h  ArrayView.h  BasicAllocators.h  CallbackSet.h  CircularArray.h  FlatMap.h  FlatSet.h  Grid.h  List.h  (+9 more)
core/physics/: Aneos.cpp  Aneos.h  Constants.h  Damage.cpp  Damage.h  Eos.cpp  Eos.h  Functions.cpp  Functions.h  Integrals.cpp  Integrals.h  Rheology.cpp  Rheology.h  TimeFormat.cpp  TimeFormat.h  Units.cpp  Units.h
core/post/: Analysis.cpp  Analysis.h  Compare.cpp  MarchingCubes.cpp  MarchingCubes.h  Mesh.cpp  MeshFile.cpp  Plot.cpp  Plot.h  Point.h  StatisticTests.h  TwoBody.cpp  TwoBody.h
core/quantities/: Attractor.cpp  Attractor.h  CompressedStorage.h  IMaterial.cpp  IMaterial.h  Iterate.h  Particle.cpp  Particle.h  Quantity.h  QuantityHelpers.h  QuantityIds.cpp  QuantityIds.h  Storage.cpp  Storage.h  Utility.cpp  Utility.h
core/relativity/: Geodesic.h
core/run/: Config.cpp  Config.h  IRun.cpp  IRun.h  Job.cpp  Job.h  Job.inl.h  Node.cpp  Node.h  ScriptNode.cpp  ScriptUtils.cpp  ScriptUtils.h  SpecialEntries.cpp  SpecialEntries.h  Trigger.h  VirtualSettings.cpp  VirtualSettings.h  VirtualSettings.inl.h
core/sph/: Diagnostics.cpp  Diagnostics.h  Materials.cpp  Materials.h
core/system/: ArgsParser.cpp  ArgsParser.h  Crashpad.h  Factory.cpp  Factory.h  Platform.cpp  Platform.h  Process.cpp  Process.h  Profiler.cpp  Profiler.h  Settings.cpp  Settings.h  Settings.impl.h  Statistics.h  Timer.cpp  Timer.h
core/tests/: Approx.h  Setup.h
core/thread/: AtomicFloat.h  CheckFunction.h  ConcurrentQueue.h  OpenMp.cpp  OpenMp.h  Pool.cpp  Pool.h  Scheduler.cpp  Scheduler.h  Tbb.cpp  Tbb.h  ThreadLocal.h
core/timestepping/: ISolver.h  TimeStepCriterion.cpp  TimeStepCriterion.h  TimeStepping.cpp  TimeStepping.h
gui/: .clang-format  Allocation.cpp  ArcBall.h  CMakeLists.txt  Callbacks.h  Collision.h  Color.h  Common.h  Config.cpp  Config.h  Controller.cpp  Controller.h  Factory.cpp  Factory.h  GlPane.cpp  GlPane.h  Gui.cpp  Gui.h  GuiCallbacks.h  ImageTransform.cpp  ImageTransform.h  MainLoop.cpp  MainLoop.h  Meteoroid.h  OrthoPane.cpp  OrthoPane.h  Palette.h  Project.cpp  Project.h  Renderer.h  Settings.cpp  Settings.h  Utils.cpp  Utils.h  Uvw.h  Window.cpp  Window.h  callbacks.h  common.h  glpane.cpp  (+6 more)
gui/collision/: Collision.cpp  Collision.h  collision.pro
gui/jobs/: CameraJobs.cpp  Presets.cpp  Presets.h  RenderJobs.cpp  RenderJobs.h
gui/launcherGui/: CMakeLists.txt  LauncherGui.cpp  LauncherGui.h  launcherGui.pro
gui/nbody/: NBody.cpp  NBody.h  nbody.pro
gui/objects/: Bitmap.cpp  Bitmap.h  Camera.cpp  Camera.h  CameraJobs.cpp  CameraJobs.h  Color.h  Colorizer.cpp  Colorizer.h  DelayedCallback.h  Drawing.h  Element.h  Factory.cpp  Filmic.cpp  Filmic.h  GraphicsContext.h  LockedPtr.h  Movie.cpp  Movie.h  Palette.cpp  Palette.h  PaletteEntry.cpp  PaletteEntry.h  Plots.cpp  Plots.h  Point.h  RenderContext.cpp  RenderContext.h  RenderJobs.cpp  RenderJobs.h  RenderWorkers.cpp  RenderWorkers.h  Shader.cpp  Shader.h  ShaderJobs.cpp  ShaderJobs.h  SvgContext.h  Texture.h
gui/player/: Player.cpp  Player.h  TimeLine.h  player.pro
gui/problems/: Collision.cpp  Collision.h  GuiRun.h  Meteoroid.h  Rotation.cpp  Rotation.h
gui/reacc/: Reacc.cpp  Reacc.h  reacc.pro
gui/renderers/: AbstractRenderer.h  Brdf.h  ContourRenderer.cpp  ContourRenderer.h  FrameBuffer.cpp  FrameBuffer.h  IRenderer.cpp  IRenderer.h  Lensing.cpp  Lensing.h  MeshRenderer.cpp  MeshRenderer.h  ParticleRenderer.cpp  ParticleRenderer.h  RayMarcher.cpp  RayMarcher.h  RayTracer.cpp  RayTracer.h  RenderContext.h  Spectrum.cpp  Spectrum.h  SurfaceRenderer.cpp  SurfaceRenderer.h  VolumeRenderer.cpp  VolumeRenderer.h
gui/rotation/: Rotation.cpp  Rotation.h  rotation.pro
gui/rubblepile/: RubblePile.cpp  RubblePile.h  rubblepile.pro
gui/sandboxGui/: SandboxGui.cpp  sandboxGui.pro
gui/ssftopng/: SsfToPng.cpp  SsfToPng.h  ssftopng.pro
gui/windows/: BatchDialog.cpp  BatchDialog.h  CurveDialog.cpp  CurveDialog.h  GlPane.cpp  GlPane.h  GridPage.cpp  GridPage.h  GuiSettingsDialog.cpp  GuiSettingsDialog.h  IGraphicsPane.h  Icons.data.h  MainWindow.cpp  MainWindow.h  NodePage.cpp  NodePage.h  OrthoPane.cpp  OrthoPane.h  PaletteDialog.cpp  PaletteDialog.h  PaletteEditor.cpp  PaletteEditor.h  PaletteProperty.cpp  PaletteProperty.h  PaletteWidget.cpp  PaletteWidget.h  ParticleProbe.cpp  ParticleProbe.h  PlotView.cpp  PlotView.h  PreviewPane.cpp  PreviewPane.h  ProgressPanel.cpp  ProgressPanel.h  RenderPage.cpp  RenderPage.h  RenderPane.cpp  RenderPane.h  RenderSetup.cpp  RenderSetup.h  (+15 more)
(+2261 files in other folders)
