set(GUI_SOURCES
    Allocation.cpp
    Controller.cpp 
    Factory.cpp 
    MainLoop.cpp 
    Project.cpp 
    Settings.cpp 
    Utils.cpp 
    ImageTransform.cpp
    objects/Bitmap.cpp 
    objects/Camera.cpp 
    objects/Colorizer.cpp 
    objects/Filmic.cpp 
    objects/Movie.cpp 
    objects/Palette.cpp 
    objects/PaletteEntry.cpp
    objects/Plots.cpp 
    objects/RenderContext.cpp 
    jobs/CameraJobs.cpp
    jobs/RenderJobs.cpp 
    jobs/Presets.cpp
    renderers/ContourRenderer.cpp 
    renderers/IRenderer.cpp 
    renderers/MeshRenderer.cpp 
    renderers/ParticleRenderer.cpp 
    renderers/VolumeRenderer.cpp 
    renderers/RayMarcher.cpp
    renderers/Spectrum.cpp 
    windows/BatchDialog.cpp 
    windows/RunSelectDialog.cpp 
    windows/SessionDialog.cpp 
    windows/GuiSettingsDialog.cpp 
    windows/CurveDialog.cpp 
    windows/GridPage.cpp 
    windows/PreviewPane.cpp
    windows/OrthoPane.cpp 
    windows/PaletteProperty.cpp
    windows/PaletteWidget.cpp
    windows/PaletteEditor.cpp
    windows/ParticleProbe.cpp 
    windows/PlotView.cpp 
    windows/RunPage.cpp 
    windows/RenderPage.cpp
    windows/NodePage.cpp 
    windows/MainWindow.cpp 
    windows/TimeLine.cpp
    windows/Tooltip.cpp
    windows/ProgressPanel.cpp
    windows/RenderSetup.cpp
    windows/Widgets.cpp)

set(GUI_HEADERS
    ArcBall.h 
    Controller.h 
    Factory.h 
    MainLoop.h 
    Project.h 
    Settings.h 
    Utils.h 
    ImageTransform.h
    objects/Bitmap.h 
    objects/Camera.h 
    objects/Color.h 
    objects/Colorizer.h 
    objects/DelayedCallback.h 
    objects/Filmic.h 
    objects/GraphicsContext.h 
    objects/Movie.h 
    objects/Palette.h 
    objects/PaletteEntry.h
    objects/Point.h 
    objects/Plots.h 
    objects/RenderContext.h 
    objects/SvgContext.h 
    objects/Texture.h
    jobs/RenderJobs.h 
    jobs/CameraJobs.h
    jobs/Presets.h
    renderers/Brdf.h 
    renderers/ContourRenderer.h 
    renderers/FrameBuffer.h 
    renderers/IRenderer.h 
    renderers/MeshRenderer.h 
    renderers/ParticleRenderer.h 
    renderers/VolumeRenderer.h 
    renderers/RayMarcher.h
    renderers/Lensing.h
    renderers/Spectrum.h 
    windows/BatchDialog.h 
    windows/RunSelectDialog.h 
    windows/SessionDialog.h 
    windows/GuiSettingsDialog.h 
    windows/CurveDialog.h 
    windows/GridPage.h 
    windows/PreviewPane.h
    windows/IGraphicsPane.h 
    windows/Icons.data.h 
    windows/OrthoPane.h 
    windows/PaletteProperty.cpp
    windows/PaletteWidget.cpp
    windows/PaletteEditor.cpp
    windows/ParticleProbe.h 
    windows/PlotView.h 
    windows/RunPage.h 
    windows/RenderPage.h
    windows/NodePage.h 
    windows/MainWindow.h 
    windows/TimeLine.h
    windows/Tooltip.h
    windows/ProgressPanel.h 
    windows/RenderSetup.h
    windows/WeakRef.h
    windows/Widgets.h)

add_library(gui STATIC ${GUI_HEADERS} ${GUI_SOURCES})
target_include_directories(gui PUBLIC ../core ..)

set(GUI_LIBRARIES core ${wxWidgets_LIBRARIES} ${TBB_LIBRARIES} ${OpenVDB_ALL_LIBRARIES})
target_link_libraries(gui PUBLIC ${GUI_LIBRARIES})
